--- a/src/styles.css
+++ b/src/styles.css
@@ -104,7 +104,7 @@ p {
 }
 
 .profile-text {
-  font-size: 0.7rem;
+  font-size: 1.2rem;
   font-weight: 400;
   text-align: justify;
 }
@@ -219,12 +219,12 @@ p {
     font-size: 1.2rem;
   }
 
-  .profile-text {
-    font-size: 0.6rem;
+  .profile-text,
+  .project-description {
+    font-size: 1rem;
     text-align: center;
   }
 
-  .project-description,
   .languages,
   .skill-list {
     font-size: 0.9rem;
