--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: Bitter;
+  font-family: Work Sans;
 }
 
 html {
@@ -182,7 +182,7 @@ p {
 .projects-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  align-items: center;
+  align-items: start;
   justify-content: space-evenly;
   gap: 30px;
 }
