--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Hind:wght@400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: Work Sans;
+  font-family: Hind;
 }
 
 html {
@@ -164,6 +164,15 @@ p {
   grid-template-columns: repeat(3, 1fr);
 }
 
+.tech-logo {
+  transition-property: transform;
+  transition-duration: 0.3s;
+}
+
+.tech-logo:hover {
+  transform: scale(1.3);
+}
+
 .technology {
   font-size: 1.1rem;
 }
@@ -190,6 +199,16 @@ p {
 .project-item a {
   color: #064663;
   font-weight: 700;
+}
+
+.project-image {
+  box-shadow: 3px 3px gray;
+  transition-property: transform;
+  transition-duration: 0.5s;
+}
+
+.project-image:hover {
+  transform: scale(0.9);
 }
 
 .languages {
