--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ html {
 section {
   margin-top: 3%;
   margin-bottom: 3%;
-  padding: 1% 15% 1%;
+  padding: 4% 15% 4%;
 }
 
 h2 {
@@ -75,11 +75,25 @@ p {
   font-size: 4.5rem;
 }
 
-.intro h3 {
+.subintro {
   color: #064663;
   font-weight: 700;
   font-size: 2rem;
   margin-top: 1.5%;
+  position: relative;
+}
+
+.subintro::after {
+  bottom: 0;
+  left: 0;
+  background-color: #ecb365;
+  content: "";
+  position: absolute;
+  transform: scaleX(0.2);
+  transform-origin: center;
+  height: 3px;
+  width: 100%;
+  z-index: 1;
 }
 
 .intro div {
@@ -95,7 +109,46 @@ p {
   padding-left: 15%;
   padding-right: 15%;
   text-align: left;
+
+  position: relative;
 }
+
+#profile::after {
+  /* animation: highlight; */
+  animation-duration: 5s;
+  content: "";
+  background-color: #ecb365;
+  height: 100%;
+  width: 100%;
+  transition: transform 1s ease-in;
+
+  transform: scaleX(0);
+  transform-origin: right;
+
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+#profile:hover {
+  color: #064663;
+}
+
+#profile:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+  z-index: -1;
+}
+
+/* @keyframes highlight {
+  from {
+    transform: scaleX(0.2);
+  }
+
+  to {
+    transform: scaleX(1);
+  }
+} */
 
 .profile-photo {
   text-align: center;
@@ -211,10 +264,15 @@ p {
   transform: scale(0.9);
 }
 
+.project-description {
+  font-size: 1.1rem;
+}
+
 .languages {
   border-radius: 5px;
   background-color: #064663;
   color: #fff;
+  font-size: 1rem;
   font-weight: 400;
   padding: 5px;
 }
