--- a/src/styles.css
+++ b/src/styles.css
@@ -120,10 +120,10 @@ p {
   background-color: #ecb365;
   height: 100%;
   width: 100%;
-  transition: transform 1s ease-in;
+  transition: transform 250ms ease-in;
 
-  transform: scaleX(0);
-  transform-origin: right;
+  transform: scaleY(0);
+  transform-origin: top;
 
   position: absolute;
   left: 0;
@@ -135,8 +135,8 @@ p {
 }
 
 #profile:hover::after {
-  transform: scaleX(1);
-  transform-origin: left;
+  transform: scaleY(1);
+  transform-origin: top;
   z-index: -1;
 }
 
