--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Hind:wght@400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: Hind;
+  font-family: "Overpass";
 }
 
 html {
@@ -44,7 +44,7 @@ p {
 /* Navbar */
 
 .navbar {
-  background-color: #064663;
+  background-color: #ecb365;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,7 +53,7 @@ p {
 }
 
 .navbar a {
-  color: #fff;
+  color: #064663;
   max-width: 17;
 }
 
@@ -117,7 +117,8 @@ p {
   /* animation: highlight; */
   animation-duration: 5s;
   content: "";
-  background-color: #ecb365;
+  background-color: #064663;
+  color: #fff;
   height: 100%;
   width: 100%;
   transition: transform 250ms ease-in;
@@ -131,7 +132,7 @@ p {
 }
 
 #profile:hover {
-  color: #064663;
+  color: #fff;
 }
 
 #profile:hover::after {
@@ -265,7 +266,7 @@ p {
 }
 
 .project-description {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
 }
 
 .languages {
