--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,13 @@
   font-family: "Montserrat";
 }
 
+:root {
+  --yellow: #ecb365;
+  --light-blue: #064663;
+  --dark-blue: #041c32;
+  --white: #fff;
+}
+
 html {
   height: 100%;
   scroll-behavior: smooth;
@@ -11,7 +18,7 @@ html {
 }
 
 #container-fluid {
-  color: #064663;
+  color: var(--light-blue);
   padding-top: 0;
 }
 
@@ -24,7 +31,7 @@ section {
 }
 
 h2 {
-  color: #041c32;
+  color: var(--dark-blue);
   font-size: 3.5rem;
   font-weight: bold;
   padding-top: 25px;
@@ -32,7 +39,7 @@ h2 {
 }
 
 h3 {
-  color: #04293a;
+  color: var(--dark-blue);
   font-size: 2rem;
   font-weight: bold;
 }
@@ -44,7 +51,6 @@ p {
 
 /* Navbar */
 .navbar {
-  /* background-color: #ecb365; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,13 +59,13 @@ p {
 }
 
 .navbar a {
-  color: #041c32;
+  color: var(--dark-blue);
   max-width: 17;
 }
 
 /* Introduction */
 .intro {
-  border-color: #041c32;
+  border-color: var(--dark-blue);
   margin-bottom: 0;
   margin-top: 50px;
   padding: 3% 3% 1%;
@@ -71,12 +77,12 @@ p {
 }
 
 .intro h1 {
-  color: #041c32;
+  color: var(--dark-blue);
   font-size: 4.5rem;
 }
 
 .subintro {
-  color: #064663;
+  color: var(--light-blue);
   font-weight: 700;
   font-size: 2rem;
   margin-top: 1.5%;
@@ -100,7 +106,7 @@ p {
 
 #profile::after {
   content: "";
-  background: linear-gradient(53deg, #064663, #041c32);
+  background: linear-gradient(53deg, var(--light-blue), var(--dark-blue));
   color: #fff;
   height: 100%;
   width: 100%;
@@ -115,7 +121,7 @@ p {
 }
 
 #profile:hover {
-  color: #fff;
+  color: var(--white);
 }
 
 #profile:hover::after {
@@ -124,37 +130,35 @@ p {
   z-index: -1;
 }
 
-/* @keyframes highlight {
-  from {
-    transform: scaleX(0.2);
-  }
-
-  to {
-    transform: scaleX(1);
-  }
-} */
+.profile-container {
+  display: grid;
+  gap: 3em;
+  grid-template-columns: 1fr 3fr;
+  grid-auto-flow: column;
+}
 
 .profile-photo {
-  text-align: center;
   margin: auto;
+  text-align: center;
+  width: 100%;
 }
 
 .profile-text {
   font-size: 1.2rem;
   font-weight: 400;
   text-align: justify;
+  line-height: 2;
 }
 
 /* Skills */
 
 #skills {
-  /* height: 50vh; */
   margin-top: 0;
   padding: 2% 15% 10%;
   text-align: center;
   transform: none;
 
-  background-color: #ecb365;
+  background-color: var(--yellow);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%23be9d65' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23908764' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23627264' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%23345c63' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%23064663' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%2306405b' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%23053a53' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%2305354a' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23042f42' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%2304293A' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
@@ -165,7 +169,7 @@ p {
 }
 
 #skills > p {
-  color: #fff;
+  color: var(--white);
   font-size: 1.2rem;
 }
 
@@ -177,7 +181,7 @@ p {
 }
 
 .skill-item {
-  background-color: #064663;
+  background-color: var(--light-blue);
   border-radius: 10px;
   padding: 10px;
   min-width: 80%;
@@ -185,16 +189,16 @@ p {
 }
 
 .skill-heading {
-  background-color: #ecb365;
+  background-color: var(--yellow);
   border-radius: 5px;
-  color: #fff;
+  color: var(--white);
   font-size: 1.3rem;
   font-weight: 600;
   padding: 10px 5px 10px;
 }
 
 .skill-list-web-development {
-  color: #f8f5f1;
+  color: var(--white);
   font-size: 1.1rem;
 
   display: grid;
@@ -214,24 +218,25 @@ p {
   font-size: 1.1rem;
 }
 
-.skill-list-engineering > li {
-  color: #f8f5f1;
-  font-size: 1.1rem;
-  text-align: left;
-}
-
 /* Portfolio and work */
 
 #portfolio {
+  padding-inline: 3em;
   text-align: center;
 }
 
 .projects-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  align-items: start;
-  justify-content: space-evenly;
-  gap: 30px;
+  gap: 1em;
+  grid-auto-flow: column;
+  grid-auto-columns: 45%;
+  overflow-x: auto;
+  overscroll-behavior-inline: contain;
+}
+
+.project-item {
+  border: 2px solid var(--yellow);
+  padding: 1em;
 }
 
 .project-item a {
@@ -239,37 +244,46 @@ p {
   font-weight: 700;
 }
 
+.project-details-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .project-image {
-  box-shadow: 3px 3px gray;
+  aspect-ratio: 16/9;
+  inline-size: 100%;
+  object-fit: cover;
+  padding-bottom: 1em;
   transition-property: transform;
   transition-duration: 0.5s;
 }
 
 .project-image:hover {
-  transform: scale(0.9);
+  transform: scale(0.97);
 }
 
 .project-description {
   font-size: 1.1rem;
+  padding-inline: 1.5em;
   text-align: justify;
 }
 
 .languages {
   border-radius: 5px;
-  background-color: #064663;
-  color: #fff;
+  background-color: var(--light-blue);
+  color: var(--white);
   font-size: 1.1rem;
   font-weight: 500;
-  padding: 5px;
+  margin-top: auto;
 }
 
 /* Scroll-to-top button */
 #scrollButton {
-  background-color: #fff;
+  background-color: var(--white);
   border: none;
   border-radius: 10px;
   bottom: 7.2em;
-  color: #064663; /* Text color */
+  color: var(--light-blue);
   cursor: pointer;
   display: none;
   font-size: 2rem;
@@ -280,20 +294,20 @@ p {
 }
 
 #scrollButton:hover {
-  background-color: #ecb365;
+  background-color: var(--yellow);
 }
 
 /* Contact */
 
 #contact {
-  background-color: #064663;
+  background-color: var(--light-blue);
   margin: 100px auto 0;
   padding: 35px;
   text-align: center;
 }
 
 .contact-me h2 {
-  color: #fff;
+  color: var(--white);
 }
 
 .email {
@@ -315,10 +329,19 @@ p {
     font-size: 1.2rem;
   }
 
+  .profile-container {
+    display: flex;
+    gap: 1.5em;
+    flex-direction: column;
+  }
+
+  .profile-photo {
+    width: 55%;
+  }
+
   .profile-text,
   .project-description {
     font-size: 1rem;
-    text-align: center;
   }
 
   .technology,
