--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: "Montserrat";
+  font-family: "Open Sans";
 }
 
 :root {
