--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Hind:wght@400;500;600;700&family=Nanum+Gothic:wght@400;700;800&display=swap");
 
 * {
-  font-family: "Segoe UI", "Open Sans", "Hind";
+  font-family: "Segoe UI, Nanum Gothic, Open Sans, Hind";
 }
 
 :root {
